re PR c++/41896 ([c++0x] Segfault because of a nested lambda function)

PR c++/41896
	* semantics.c (outer_lambda_capture_p): Use current_function_decl
	instead of current_class_type.

From-SVN: r156673