gcc/testsuite/g++.dg/cpp0x/lambda/lambda-nested3.C
@@ -1,0 +1,12 @@
+// PR c++/41896
+// { dg-options "-std=c++0x" }
+
+void nested_lambda()
+{
+  float val;
+
+  [val]()
+    {
+      [val](){};
+    };
+}
